force-app/main/default/objects/Product2/fields/Approval_Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Approval_Product_Category__c</fullName>
    <description>As per Jira #SDS-2987</description>
    <label>Approval Product Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_Line__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>vGPU</fullName>
            </value>
            <value>
                <fullName>RTX</fullName>
            </value>
            <value>
                <fullName>DC GPU</fullName>
            </value>
            <value>
                <fullName>DGX</fullName>
            </value>
            <value>
                <fullName>ProViz Desktop</fullName>
            </value>
            <value>
                <fullName>ProViz Notebook</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>