force-app/main/default/objects/Product2/fields/Available_for_Datacenter_or_Edge__c.field-meta.xml
<CustomField>
    <fullName>Available_for_Datacenter_or_Edge__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SDS-1631 - Sales: EGX enhancements needed in system</description>
    <label>Available for Datacenter or Edge</label>
    <type>Checkbox</type>
</CustomField>