force-app/main/default/objects/Product2/fields/Available_for_Direct_Selling__c.field-meta.xml
<CustomField>
    <fullName>Available_for_Direct_Selling__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identify products that can be sold directly to the End Customer</description>
    <inlineHelpText>Check this box to Identify products that can be sold directly to the End Customer</inlineHelpText>
    <label>Available for Direct Selling</label>
    <type>Checkbox</type>
</CustomField>