force-app/main/default/objects/Product2/fields/Available_for_EDU_Discount__c.field-meta.xml
<CustomField>
    <fullName>Available_for_EDU_Discount__c</fullName>
    <description>SDS-2323</description>
    <label>Available for EDU Discount</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>