force-app/main/default/objects/Product2/fields/Base_SKU__c.field-meta.xml
<CustomField>
    <fullName>Base_SKU__c</fullName>
    <description>Opp Reg &gt; SAP integration (it can be semi-colon separated; if a sfdc product is applicable to 2 SKUs eg., different product like 16gb|32gb but its support has same price; in opp reg scenario instead of 2 products we are having only one product as pricing remains same)</description>
    <label>Base SKU</label>
    <length>50</length>
    <type>Text</type>
</CustomField>