force-app/main/default/objects/Product2/fields/Bundled_Product__c.field-meta.xml
<CustomField>
    <fullName>Bundled_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Bundled Product</description>
    <label>Bundled Product</label>
    <type>Checkbox</type>
</CustomField>