force-app/main/default/objects/Product2/fields/Competency__c.field-meta.xml
<CustomField>
    <fullName>Competency__c</fullName>
    <label>Competency</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Compute</fullName>
            </value>
            <value>
                <fullName>DGX</fullName>
            </value>
            <value>
                <fullName>Virtualization</fullName>
            </value>
            <value>
                <fullName>Visualization</fullName>
            </value>
            <value>
                <fullName>Embedded Edge</fullName>
            </value>
            <value>
                <fullName>Tesla</fullName>
            </value>
            <value>
                <fullName>vGPU</fullName>
            </value>
            <value>
                <fullName>Quadro</fullName>
            </value>
            <value>
                <fullName>Jetson</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>