force-app/main/default/objects/Product2/fields/CountryBasedSKU__c.field-meta.xml
<CustomField>
    <fullName>CountryBasedSKU__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if this is a Country Based SKU</description>
    <label>Country Based SKU</label>
    <type>Checkbox</type>
</CustomField>