force-app/main/default/objects/Product2/fields/Dynamic_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Dynamic_Pricing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Dynamically Priced Product Indicator</description>
    <inlineHelpText>Dynamically Priced Product Indicator</inlineHelpText>
    <label>Dynamic Pricing</label>
    <type>Checkbox</type>
</CustomField>