force-app/main/default/objects/Product2/fields/Early_Access__c.field-meta.xml
<CustomField>
    <fullName>Early_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <description>As per Jira #SDS-3184</description>
    <label>Early Access</label>
    <type>Checkbox</type>
</CustomField>