force-app/main/default/objects/Product2/fields/EDU_Pre_Approved_Rebate__c.field-meta.xml
<CustomField>
    <fullName>EDU_Pre_Approved_Rebate__c</fullName>
    <description>SDS-2323</description>
    <label>EDU Pre-Approved Rebate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>