force-app/main/default/objects/Product2/fields/Is_Deal_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Is_Deal_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Deal Registration: This flag is enabled for products that is enabled for Deal Registration. If this is active, any opportunity that contains this product is a potential Deal Reg opportunity</description>
    <label>Is Deal Enabled</label>
    <type>Checkbox</type>
</CustomField>