force-app/main/default/objects/Product2/fields/IsCPQ__c.field-meta.xml
<CustomField>
    <fullName>IsCPQ__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsCPQ</label>
    <type>Checkbox</type>
</CustomField>