force-app/main/default/objects/Product2/fields/IsUpgrade__c.field-meta.xml
<CustomField>
    <fullName>IsUpgrade__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Upgrade Product</description>
    <inlineHelpText>Upgrade Product</inlineHelpText>
    <label>IsUpgrade</label>
    <type>Checkbox</type>
</CustomField>