force-app/main/default/objects/Product2/fields/License_Type__c.field-meta.xml
<CustomField>
    <fullName>License_Type__c</fullName>
    <description>Software License Type</description>
    <inlineHelpText>Software Product License Type</inlineHelpText>
    <label>License Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Perpetual</fullName>
            </value>
            <value>
                <fullName>Subscription</fullName>
            </value>
            <value>
                <fullName>Usage</fullName>
            </value>
            <value>
                <fullName>Upfront</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>