force-app/main/default/objects/Product2/fields/Notebook_Cost__c.field-meta.xml
<CustomField>
    <fullName>Notebook_Cost__c</fullName>
    <label>Notebook Cost</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>