force-app/main/default/objects/Product2/fields/Number_of_GPUs__c.field-meta.xml
<CustomField>
    <fullName>Number_of_GPUs__c</fullName>
    <description>SDS-1507</description>
    <label>GPUs in Product</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>