force-app/main/default/objects/Product2/fields/NVIDIA_Product_SKUs__c.field-meta.xml
<CustomField>
    <fullName>NVIDIA_Product_SKUs__c</fullName>
    <description>POS Reporting for NVIDIA branded products</description>
    <label>NVIDIA Product SKUs</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>