force-app/main/default/objects/Product2/fields/POS_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>POS_Product_Code__c</fullName>
    <description>POS Reporting for NVIDIA branded products</description>
    <label>POS Product Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>