force-app/main/default/objects/Product2/fields/Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Product_Group__c</fullName>
    <description>Product Group Classification</description>
    <inlineHelpText>Classification of a Product within a Product Line</inlineHelpText>
    <label>Product Group</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_Line__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Virtual Work Station</fullName>
            </value>
            <value>
                <fullName>Virtual Personal Computer</fullName>
            </value>
            <value>
                <fullName>Virtual Applications</fullName>
            </value>
            <value>
                <fullName>Virtual Compute Server</fullName>
            </value>
            <value>
                <fullName>A100</fullName>
            </value>
            <value>
                <fullName>Workstation</fullName>
            </value>
            <value>
                <fullName>V100</fullName>
            </value>
            <value>
                <fullName>Quadro</fullName>
            </value>
            <value>
                <fullName>T4</fullName>
            </value>
            <value>
                <fullName>VCS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>