force-app/main/default/objects/Product2/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <label>Product Line</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_Type__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Automotive</fullName>
            </value>
            <value>
                <fullName>Automotive Datacenter</fullName>
            </value>
            <value>
                <fullName>CMP</fullName>
            </value>
            <value>
                <fullName>DC GPU</fullName>
            </value>
            <value>
                <fullName>DGX</fullName>
            </value>
            <value>
                <fullName>Educational Services</fullName>
            </value>
            <value>
                <fullName>Fleet Command</fullName>
            </value>
            <value>
                <fullName>GeForce</fullName>
            </value>
            <value>
                <fullName>Grid</fullName>
            </value>
            <value>
                <fullName>Grid Hardware</fullName>
            </value>
            <value>
                <fullName>HPC SDK</fullName>
            </value>
            <value>
                <fullName>Jetson</fullName>
            </value>
            <value>
                <fullName>NGC-Ready Services</fullName>
            </value>
            <value>
                <fullName>Parabricks</fullName>
            </value>
            <value>
                <fullName>ProViz</fullName>
            </value>
            <value>
                <fullName>RTX</fullName>
            </value>
            <value>
                <fullName>RTX Blade Server</fullName>
            </value>
            <value>
                <fullName>Titan</fullName>
            </value>
            <value>
                <fullName>Value-Added Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>