force-app/main/default/objects/Product2/fields/Product_Number__c.field-meta.xml
<CustomField>
    <fullName>Product_Number__c</fullName>
    <description>SDS-2251-Create a new auto number field on Products and put on page</description>
    <displayFormat>P-{0000}</displayFormat>
    <label>Product Number</label>
    <type>AutoNumber</type>
</CustomField>