force-app/main/default/objects/Product2/fields/Product_Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Product_Sort_Order__c</fullName>
    <description>Used to sort Parts in order in the &quot;Select a Product&quot; pop-up window. Parts to be displayed in descending order (largest &quot;Product Sort&quot; to be at top of list).</description>
    <label>Product Sort Order</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>