force-app/main/default/objects/Product2/fields/Programmatic_Discount_Available__c.field-meta.xml
<CustomField>
    <fullName>Programmatic_Discount_Available__c</fullName>
    <description>Programmatic Discounts Available for this Product</description>
    <inlineHelpText>Programmatic Discounts Available for this Product</inlineHelpText>
    <label>Programmatic Discount Available</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OppReg</fullName>
            </value>
            <value>
                <fullName>ELA</fullName>
            </value>
            <value>
                <fullName>EDU</fullName>
            </value>
            <value>
                <fullName>IN</fullName>
            </value>
            <value>
                <fullName>EDUR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>