force-app/main/default/objects/Product2/fields/SLA_Scope__c.field-meta.xml
<CustomField>
    <fullName>SLA_Scope__c</fullName>
    <label>SLA Scope</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All with same Product Line</fullName>
            </value>
            <value>
                <fullName>All with same Serial Number</fullName>
            </value>
            <value>
                <fullName>Only self</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>