force-app/main/default/objects/Product2/fields/Special_Program_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>Special_Program_Eligibility__c</fullName>
    <inlineHelpText>Identify product eligibility for special promotions programs that may provide additional discounts and require Special price approvals.</inlineHelpText>
    <label>Special Program Eligibility</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>NFR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>