force-app/main/default/objects/Product2/fields/Support_level__c.field-meta.xml
<CustomField>
    <fullName>Support_level__c</fullName>
    <label>Support level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>24x7 Escalated Remote</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>