force-app/main/default/objects/Product2/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <description>Opp Reg &gt; SAP integration. In months like 12|36|60 months</description>
    <label>Term</label>
    <length>2</length>
    <type>Text</type>
</CustomField>