force-app/main/default/objects/Product2/fields/UniqueCode__c.field-meta.xml
<CustomField>
    <fullName>UniqueCode__c</fullName>
    <description>Copy of product code, used as unique identifier.</description>
    <externalId>true</externalId>
    <label>Unique Product Code</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>