force-app/main/default/objects/Product2/fields/Upgrade_Product__c.field-meta.xml
<CustomField>
    <fullName>Upgrade_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Upgrade Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Products (Upgrade Product)</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>