force-app/main/default/objects/Product2/fields/User_Guide__c.field-meta.xml
<CustomField>
    <fullName>User_Guide__c</fullName>
    <label>User Guide</label>
    <type>Url</type>
</CustomField>