force-app/main/default/objects/Product2/validationRules/License_Type_Required_for_SW_Products.validationRule-meta.xml
<ValidationRule>
    <fullName>License_Type_Required_for_SW_Products</fullName>
    <active>true</active>
    <description>License Type Required for SW Products</description>
    <errorConditionFormula>AND ( IsCPQ__c, ISPICKVAL( Product_Type__c , &apos;Software&apos;), ISBLANK( TEXT(License_Type__c) ) )</errorConditionFormula>
    <errorDisplayField>License_Type__c</errorDisplayField>
    <errorMessage>License Type Required for Software Products</errorMessage>
</ValidationRule>