force-app/main/default/objects/Product2/validationRules/Product_Code_Must_Be_Populated.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_Code_Must_Be_Populated</fullName>
    <active>true</active>
    <description>Product code must be populated on products.</description>
    <errorConditionFormula>AND(ISBLANK( ProductCode ), IsCPQ__c = True)</errorConditionFormula>
    <errorMessage>Product Code must be populated and unique for CPQ products.</errorMessage>
</ValidationRule>