force-app/main/default/objects/Product2/validationRules/Product_SKU_must_be_Populated_for_DGX.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_SKU_must_be_Populated_for_DGX</fullName>
    <active>true</active>
    <description>ProductCode</description>
    <errorConditionFormula>OR (AND(ISBLANK(  StockKeepingUnit  ), IsCPQ__c = True,   ISPICKVAL(Product_Line__c, &apos;DGX&apos;), ISPICKVAL(Product_Type__c, &apos;Hardware&apos;) ),

AND(IF(StockKeepingUnit == ProductCode, True, False) , IsCPQ__c = True,   ISPICKVAL(Product_Line__c, &apos;DGX&apos;), ISPICKVAL(Product_Type__c, &apos;Hardware&apos;) )
)</errorConditionFormula>
    <errorDisplayField>StockKeepingUnit</errorDisplayField>
    <errorMessage>Valid Product SKU must be populated.</errorMessage>
</ValidationRule>