force-app/main/default/objects/Product2/listViews/Active_Hardware_Products.listView-meta.xml
<ListView>
    <fullName>Active_Hardware_Products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>NVIDIA_Product_SKUs__c</columns>
    <columns>Product_Line__c</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>PRODUCT2.CREATED_DATE</columns>
    <columns>IsCPQ__c</columns>
    <columns>Base_SKU__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Product_Type__c</field>
        <operation>equals</operation>
        <value>Hardware</value>
    </filters>
    <label>Active Hardware Products</label>
    <language>en_US</language>
</ListView>