force-app/main/default/objects/Product2/listViews/Active_Jetson_Embedded_Products.listView-meta.xml
<ListView>
    <fullName>Active_Jetson_Embedded_Products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Product_Type__c</columns>
    <columns>Product_Line__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Product_Line__c</field>
        <operation>equals</operation>
        <value>Embedded</value>
    </filters>
    <label>Active Jetson/Embedded Products</label>
    <language>en_US</language>
</ListView>