force-app/main/default/objects/Product2/listViews/Active_Platform_Products.listView-meta.xml
<ListView>
    <fullName>Active_Platform_Products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>Product_Line__c</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>IsCPQ__c</columns>
    <columns>SBQQ__Hidden__c</columns>
    <columns>PRODUCT2.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Product_Line__c</field>
        <operation>equals</operation>
        <value>DC GPU,Grid Hardware,ProViz,RTX,Titan</value>
    </filters>
    <label>Active Platform Products</label>
</ListView>