force-app/main/default/objects/Product2/listViews/All_Active_Products.listView-meta.xml
<ListView>
    <fullName>All_Active_Products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>Product_Type__c</columns>
    <columns>Product_Line__c</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Programmatic_Discount_Available__c</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>IsCPQ__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Active Products</label>
</ListView>