force-app/main/default/objects/Product2/listViews/All_Active_Products_EDU.listView-meta.xml
<ListView>
    <fullName>All_Active_Products_EDU</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>Product_Type__c</columns>
    <columns>Product_Line__c</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Base_SKU__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>PRODUCT2.NAME</field>
        <operation>contains</operation>
        <value>Edu</value>
    </filters>
    <label>All Active Products EDU</label>
    <language>en_US</language>
</ListView>