force-app/main/default/objects/Product2/listViews/Deal_Enabled.listView-meta.xml
<ListView>
    <fullName>Deal_Enabled</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>Is_Deal_Enabled__c</columns>
    <columns>PRODUCT2.LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Deal_Enabled__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Deal Enabled</label>
    <language>en_US</language>
</ListView>