force-app/main/default/objects/Product2/listViews/DLI_Products.listView-meta.xml
<ListView>
    <fullName>DLI_Products</fullName>
    <booleanFilter>1 OR 2 OR 3</booleanFilter>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>Product_Type__c</columns>
    <columns>Product_Line__c</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.NAME</field>
        <operation>contains</operation>
        <value>DLI</value>
    </filters>
    <filters>
        <field>PRODUCT2.DESCRIPTION</field>
        <operation>contains</operation>
        <value>DLI</value>
    </filters>
    <filters>
        <field>PRODUCT2.CUSTOMER_PRODUCT_ID</field>
        <operation>contains</operation>
        <value>DLI</value>
    </filters>
    <label>DLI Products</label>
</ListView>