force-app/main/default/objects/Product2/listViews/EGX_Available_Products.listView-meta.xml
<ListView>
    <fullName>EGX_Available_Products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Available_for_Datacenter_or_Edge__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Available_for_Datacenter_or_Edge__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>EGX Available Products</label>
</ListView>